# Py-Helpers

./: .gitignore  README.md  setup.cfg
.github/workflows/: deploy-prod.yml  deploy-test.yml  install-and-test.yml  python-app.yml
src/bakle_helpers/: email.py  str.py  url.py
tests/: test_email.py  test_string.py  test_url.py
