[metadata]
name = Helpers-Bakle
version = 0.1.0
author = Bashir Akle
author_email = bashir.akle@gmail.com
description = Package that provides multiple helpers
long_description = file: README.md
long_description_content_type  = text/markdown
url = https://github.com/bakle/Py-Validator
project_urls = 
    Bug Tracker = https://github.com/bakle/Py-Validator/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
